# Slowed-Reverb-Site

./: .gitignore  README.md  build.sh  db.sqlite3  manage.py  pyproject.toml  render.yaml  requirements.txt
app/: api.py  apps.py  audio_ingest.py  effects.py  http_range.py  misc.py  track_store.py  urls.py  views.py
app/static/app/css/: style.css
app/static/app/fonts/: fonts.css
app/static/app/js/: background.js  effects.js  main.js  player.js  upload.js
app/templates/app/: base.html  index.html  result.html
app/templatetags/: funcs.py  range.py
app/tests/: support.py  test_api_audio.py  test_api_tracks.py  test_api_youtube.py  test_audio_ingest.py  test_http_range.py  test_track_store.py
frontend/: .gitignore  package-lock.json  package.json  vite.config.ts
frontend/src/: app.css
frontend/src/components/: EffectsPanel.svelte  PlayerBar.svelte  Playlist.svelte  Slider.svelte  UploadPanel.svelte  Waveform.svelte  YoutubePanel.svelte
frontend/src/lib/api/: tracks.ts
frontend/src/lib/audio/: engine.ts  export.ts  math.ts  peaks.ts  reverb.ts
frontend/src/lib/stores/: effects.ts  player.ts  playlist.ts
frontend/src/routes/: +page.svelte
frontend/tests/: effects.test.ts  engine.test.ts  export.test.ts  fakes.ts  math.test.ts  peaks.test.ts  playlist.test.ts  reverb.test.ts  tracks.test.ts
slowedreverbsite/: asgi.py  settings.py  urls.py  wsgi.py
